--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
       </p>
       
       <div class="social-links">
-        <a href="https://www.instagram.com/bloodycum11/" class="social-btn instagram" target="_blank">
+        <a href="https://www.instagram.com/z11meow/" class="social-btn instagram" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="https://www.tiktok.com/@zara11n?_t=ZS-8wiC51o7EzA&_r=1" class="social-btn tiktok" target="_blank">
