--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         <a href="#" class="social-btn snapchat" target="_blank">
           <i class="fab fa-snapchat-ghost"></i>
         </a>
-        <a href="https://discord.gg/rfxr7yMu" class="social-btn discord" target="_blank">
+        <a href="https://discord.gg/NWtyXdDsSP" class="social-btn discord" target="_blank">
           <i class="fab fa-discord"></i>
         </a>
       </div>
